added more sutff

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,5 +8,7 @@ board_build.partitions = esp32_gateway_4mb.csv
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder #, log2file, xtime
 
+platform_packages = platformio/tool-esptoolpy@^1.40501.0
+
 lib_deps = 
 
